--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-Welcome to Yunha (Daniel) Jang's Github!
+<html>
+  <head>
+    <title></title>
+  </head>
 
 
-----------------------------
-http://yunha0221.github.io
+  <body>
+    <h2>Welcome to Yunha (Daniel) Jang's Github! </h2>
+    
+    <h2>
+        ;)
+    </h2>
+
+  </body>
+</html>
