--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       Javascript
     </h3>
     <h4>
-      <a herf="https://github.com/yunha0221/pizza-order-system">Pizza Order System</a>
+      <a href="https://github.com/yunha0221/pizza-order-system">Pizza Order System</a>
     </h4>
   </body>
 </html>
