--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         Projects
     </h2>
     <h3>
+      AngularJS
+    </h3>
+    <h4>
+      <a href="https://github.com/yunha0221/Energy-Cost-Calculator">Energy Gost Calculator</a>
+    </h4>
+    <h3>
       Javascript
     </h3>
     <h4>
