--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       AngularJS
     </h3>
     <h4>
-      <a href="https://github.com/yunha0221/Energy-Cost-Calculator">Energy Gost Calculator</a>
+      <a href="https://github.com/yunha0221/Energy-Cost-Calculator">Energy Cost Calculator</a>
     </h4>
     <h3>
       Javascript
