--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <head>
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <title>YUNHA (DANIEL) JANG</title>
+    
   </head>
-
 
   <body>
     <h2>Welcome to </h2>
@@ -11,21 +18,15 @@
     <h2>
         Projects
     </h2>
-    <h3>
-      Enterprise JAVA
-    </h3>
+    <h3>Enterprise JAVA</h3>
     <h4>
       <a href="https://github.com/yunha0221/Student-Registration-System">Student Registration System</a>
     </h4>
-    <h3>
-      AngularJS
-    </h3>
+    <h3>AngularJS</h3>
     <h4>
       <a href="https://github.com/yunha0221/Energy-Cost-Calculator">Energy Cost Calculator</a>
     </h4>
-    <h3>
-      Javascript
-    </h3>
+    <h3>Javascript</h3>
     <h4>
       <a href="https://github.com/yunha0221/pizza-order-system">Pizza Order System</a>
     </h4>
