--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,23 +13,25 @@
   </head>
 
   <body>
-    <h2>Welcome to </h2>
-    <h1>Yunha (Daniel) Jang's Github!</h1>
-    
-    <h2>
-        Projects
-    </h2>
-    <h3>Enterprise JAVA</h3>
-    <h4>
-      <a href="https://github.com/yunha0221/Student-Registration-System">Student Registration System</a>
-    </h4>
-    <h3>AngularJS</h3>
-    <h4>
-      <a href="https://github.com/yunha0221/Energy-Cost-Calculator">Energy Cost Calculator</a>
-    </h4>
-    <h3>Javascript</h3>
-    <h4>
-      <a href="https://github.com/yunha0221/pizza-order-system">Pizza Order System</a>
-    </h4>
+    <div class="container">
+      <h2>Welcome to </h2>
+      <h1>Yunha (Daniel) Jang's Github!</h1>
+      
+      <h2>
+          Projects
+      </h2>
+      <h3>Enterprise JAVA</h3>
+      <h4>
+        <a href="https://github.com/yunha0221/Student-Registration-System">Student Registration System</a>
+      </h4>
+      <h3>AngularJS</h3>
+      <h4>
+        <a href="https://github.com/yunha0221/Energy-Cost-Calculator">Energy Cost Calculator</a>
+      </h4>
+      <h3>Javascript</h3>
+      <h4>
+        <a href="https://github.com/yunha0221/pizza-order-system">Pizza Order System</a>
+      </h4>
+    </div>
   </body>
 </html>
