--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <title>YUNHA (DANIEL) JANG</title>
-    
   </head>
 
   <body>
     <div class="container">
-      <h2>Welcome to </h2>
-      <h1>Yunha (Daniel) Jang's Github!</h1>
-      
+      <header>
+        <h2>Welcome to </h2>
+        <h1>Yunha (Daniel) Jang's Github!</h1>
+      </header>
       <h2>
           Projects
       </h2>
