--- a/index.html
+++ b/index.html
@@ -21,20 +21,14 @@
         <style type="text/css">
             html, body {
                 height: 100%;
-                background-color: #000044;
+                background-color: #000000;
             }
             .container, md-content {
-                color: #888888;
-                background-color: #000044;
-            }
-            md-card {
-                border: 2px solid #000044;
+                color: #FF0000;
+                background-color: #000000;
             }
             img {
                 width: 100%;
-            }
-            .md-headline {
-                color: #000044;
             }
         </style>
         <title>YUNHA (DANIEL) JANG</title>
