--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
         <style type="text/css">
             html, body {
                 height: 100%;
-                background-color: #000000;
-            }
-            .container, md-content {
-                color: #FF0000;
-                background-color: #000000;
+                background-color: #FFFFFF;
             }
             img {
                 width: 100%;
@@ -63,7 +59,8 @@
                       </md-card-title-text>
                     </md-card-title>
                     <md-card-content>
-                      <img src="https://raw.githubusercontent.com/yunha0221/Energy-Cost-Calculator/master/assets/images/calc_big.png" class="md-card-image" alt="Washed Out">
+                        <a href="https://github.com/yunha0221/Energy-Cost-Calculator">
+                        <img src="https://raw.githubusercontent.com/yunha0221/Energy-Cost-Calculator/master/assets/images/calc_big.png" class="md-card-image" alt="Washed Out"></a>
                     </md-card-content>
                 </md-card>
 
@@ -83,7 +80,8 @@
                       </md-card-title-text>
                     </md-card-title>
                     <md-card-content>
-                      <img src="https://raw.githubusercontent.com/yunha0221/pizza-order-system/master/screenshot.png" class="md-card-image" alt="Washed Out">
+                        <a href="https://github.com/yunha0221/pizza-order-system">
+                        <img src="https://raw.githubusercontent.com/yunha0221/pizza-order-system/master/screenshot.png" class="md-card-image" alt="Washed Out"></a>
                     </md-card-content>
                 </md-card>
             </div>
@@ -105,7 +103,8 @@
                       </md-card-title-text>
                     </md-card-title>
                     <md-card-content>
-                        <img src="https://raw.githubusercontent.com/yunha0221/Student-Registration-System/master/screenshots/s1.png" class="md-card-image" alt="Washed Out">
+                        <a href="https://github.com/yunha0221/Student-Registration-System">
+                        <img src="https://raw.githubusercontent.com/yunha0221/Student-Registration-System/master/screenshots/s1.png" class="md-card-image" alt="Washed Out"></a>
                     </md-card-content>
                 </md-card>
             </div>
