--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </md-card-header>
                     <md-card-title>
                       <md-card-title-text>
-                        <span class="md-headline"><a href="https://github.com/yunha0221/Student-Registration-System">Student Registration System</a></span>
+                        <span class="md-headline"><a href="https://github.com/yunha0221/Student-Registration-System">Student Information System</a></span>
                       </md-card-title-text>
                     </md-card-title>
                     <md-card-content>
