--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                       </md-card-avatar>
                       <md-card-header-text>
                         <span class="md-title">Enterprise JAVA</span>
-                        <span class="md-subhead">project</span>
+                        <span class="md-subhead">skills $ tools: Java EE, JSP, JSPF, JSTL, servlets, MySQL, Tomcat and Eclipse</span>
                       </md-card-header-text>
                     </md-card-header>
                     <md-card-title>
