--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       </md-card-avatar>
                       <md-card-header-text>
                         <span class="md-title">AngularJS</span>
-                        <span class="md-subhead">project</span>
+                        <span class="md-subhead">practice</span>
                       </md-card-header-text>
                     </md-card-header>
                     <md-card-title>
