--- a/index.html
+++ b/index.html
@@ -63,7 +63,27 @@
                         <img src="https://raw.githubusercontent.com/yunha0221/Energy-Cost-Calculator/master/assets/images/calc_big.png" class="md-card-image" alt="Washed Out"></a>
                     </md-card-content>
                 </md-card>
-
+                
+                <md-card>
+                    <md-card-header>
+                      <md-card-avatar>
+                        <img src="js-logo.svg"/>
+                      </md-card-avatar>
+                      <md-card-header-text>
+                        <span class="md-title">JavaScript, PHP, MYSQL</span>
+                        <span class="md-subhead">project</span>
+                      </md-card-header-text>
+                    </md-card-header>
+                    <md-card-title>
+                      <md-card-title-text>
+                        <span class="md-headline">Pizza Order System (2) /a></span>
+                      </md-card-title-text>
+                    </md-card-title>
+                    <md-card-content>
+                        Coming Soon..
+                    </md-card-content>
+                </md-card>
+                
                 <md-card>
                     <md-card-header>
                       <md-card-avatar>
@@ -76,7 +96,7 @@
                     </md-card-header>
                     <md-card-title>
                       <md-card-title-text>
-                        <span class="md-headline"><a href="https://github.com/yunha0221/pizza-order-system">Pizza Order System</a></span>
+                        <span class="md-headline"><a href="https://github.com/yunha0221/pizza-order-system">Pizza Order System (1) </a></span>
                       </md-card-title-text>
                     </md-card-title>
                     <md-card-content>
