--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <md-card>
                     <md-card-header>
                       <md-card-avatar>
-                        <img src="pm-logo.svg"/>
+                        <img src="pm-logo.png"/>
                       </md-card-avatar>
                       <md-card-header-text>
                         <span class="md-title">JavaScript, PHP, MYSQL</span>
