--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@
 
 <body ng-app="myApp" ng-cloak>
 
-    <div class="container">
-        
-        <header>
-            <h2>Welcome to </h2>
-            <h1>Yunha (Daniel) Jang's Github!</h1>
-        </header>
-        <hr>
+        <div class="md-toolbar-tools">
+    		<strong>Yunha (Daniel) Jang's Github</strong>
+	    </div>
 
         <md-content class="md-padding" layout-xs="column" layout="row">
             <div flex-xs flex-gt-xs="50" layout="column">
@@ -134,6 +130,6 @@
             </div>
             
         </md-content>
-    </div>
+
 </body>
 </html>
