--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     </head>
 
 <body ng-app="myApp" ng-cloak>
-
-        <div class="md-toolbar-tools">
+	
+	<md-toolbar>
+            <div class="md-toolbar-tools">
     		<strong>Yunha (Daniel) Jang's Github</strong>
 	    </div>
-
+	</md-toolbar>
+	
         <md-content class="md-padding" layout-xs="column" layout="row">
             <div flex-xs flex-gt-xs="50" layout="column">
                 
