--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
 
 <body ng-app="myApp" ng-cloak>
-	
+    <div class="container">
 	<md-toolbar>
             <div class="md-toolbar-tools">
     		<strong>Yunha (Daniel) Jang's Github</strong>
@@ -132,6 +132,6 @@
             </div>
             
         </md-content>
-
+    </div>
 </body>
 </html>
