--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                 width: 100%;
             }
         </style>
-        <title>YUNHA (DANIEL) JANG</title>
+        <title>DANIEL JANG</title>
     </head>
 
 <body ng-app="myApp" ng-cloak>
     <div class="container">
 	<md-toolbar>
             <div class="md-toolbar-tools">
-    		<strong>Yunha (Daniel) Jang's Github</strong>
+    		<strong>Daniel Jang's Github</strong>
 	    </div>
 	</md-toolbar>
 	
